--- a/src/styles/projects/green-eats.scss
+++ b/src/styles/projects/green-eats.scss
@@ -15,16 +15,93 @@
   min-height: 100vh;
 }
 
-// @media screen and (max-width: 768px) {
-//   .green-eats__bg__main {
-//     min-height: 110vh;
-//     background: red;
-//   }
-// }
-//
-// @media screen and (max-width: 576px) {
-//   .green-eats__bg__main {
-//     background: blue;
-//     min-height: 130vh;
-//   }
-// }
+@media screen and (max-width: 1160px) {
+  .green-eats__bg__main {
+    min-height: 110vh;
+  }
+}
+
+@media screen and (max-width: 1140px) {
+  .green-eats__bg__main {
+    min-height: 110vh;
+  }
+}
+
+@media screen and (max-width: 1100px) {
+  .green-eats__bg__main {
+    min-height: 110vh;
+  }
+}
+
+@media screen and (max-width: 1055px) {
+  .green-eats__bg__main {
+    min-height: 120vh;
+  }
+}
+
+@media screen and (max-width: 1015px) {
+  .green-eats__bg__main {
+    min-height: 115vh;
+  }
+}
+
+@media screen and (max-width: 992px) {
+  .green-eats__bg__main {
+    min-height: 115vh;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .green-eats__bg__main {
+    min-height: 115vh;
+  }
+}
+
+@media screen and (max-width: 825px) {
+  .green-eats__bg__main {
+    min-height: 120vh;
+  }
+}
+
+@media screen and (max-width: 788px) {
+  .green-eats__bg__main {
+    min-height: 125vh;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .green-eats__bg__main {
+    min-height: 120vh;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .green-eats__bg__main {
+    min-height: 120vh;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .green-eats__bg__main {
+    min-height: 115vh;
+  }
+}
+
+@media screen and (max-width: 515px) {
+  .green-eats__bg__main {
+    min-height: 125vh;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .green-eats__bg__main {
+    min-height: 120vh;
+  }
+}
+
+
+@media screen and (max-width: 450px) {
+  .green-eats__bg__main {
+    min-height: 130vh;
+  }
+}
